--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -53,6 +53,7 @@ $mobile-card-bottom-height: $mobile-card-padding-top
 $z-sidebars             : 1;
 $z-dropdown             : 100;
 $z-dropdown-open        : $z-dropdown + 1;
+$z-open-component       : 140;
 $z-cart-notify          : 150;
 $z-mobile-menu          : 200;
 $z-navbar               : 900;
